--- a/Build_A_Portfolio/PortfolioTester/index.html
+++ b/Build_A_Portfolio/PortfolioTester/index.html
@@ -13,12 +13,28 @@
             <div class="col-md-6">
                 <img src="images/logo.jpg" alt="Logo Image">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 text-right text-uppercase">
                 <h1>Jan Doette</h1>
                 <h4>Front-end Ninja</h4>
             </div>
           </div>
-        </div>                         
+         <div class="row">
+             <div class="col-md-12">
+                 <hr>
+         </div>
+         <div class="row">
+             <div class="col-md-12">
+                 <img class="img-responsive" src="images/hr.jpg" alt="Droid Image">
+         </div>  
+       </div>  
+       <div class="row">
+           <div class="col-md-12">
+               <h2>
+                   Featured Work
+               </h2>
+           </div>
+      </div>         
+     </div>                         
     </body>
 </html>
     
