Portfolio Test Project Completed.

--- a/Build_A_Portfolio/PortfolioTester/index.html
+++ b/Build_A_Portfolio/PortfolioTester/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-US-Compatiable" content="IE=edge">
     <meta name"viewport" content="width=device-width, initial-scale=1">
-    <title>Puppy Portfolio</title>
+    <title>Portfolio Test</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     </head>
     <body>
@@ -14,7 +14,7 @@
                 <img src="images/logo.jpg" alt="Logo Image">
             </div>
             <div class="col-md-6 text-right text-uppercase">
-                <h1>Jan Doette</h1>
+                <h1>McKinnely Bentley</h1>
                 <h4>Front-end Ninja</h4>
             </div>
           </div>
@@ -33,7 +33,27 @@
                    Featured Work
                </h2>
            </div>
-      </div>         
+      </div> 
+      <div class="row">
+          <div class="col-md-4 text-center text-uppercase">
+            <img class="img-responsive" src="images/ln_vs_win.jpg"  alt="Droid Image">
+            <h4>Email Address: </h4>
+          </div>
+          <div class="col-md-4 text-center text-uppercase">
+             <img class="img-responsive" src="images/lnGun.jpg" alt="Droid Image">
+             <h4>Email Address: </h4>
+          </div>
+          <div class="col-md-4 text-center text-uppercase">
+          <img class="img-responsive" src="images/lnH.jpg"  alt="Droid Image">
+          <h4>Email Address: </h4>
+          </div>
+      </div>    
+      <div class="row">
+          <div class="col-md-12">         
+          <h4>Email Address: </h4>
+          </div>
+      </div>
+
      </div>                         
     </body>
 </html>
