Updated Description Data.

--- a/Fix_It/RWDF L2 Start/Start/index.html
+++ b/Fix_It/RWDF L2 Start/Start/index.html
@@ -33,7 +33,7 @@
         <section class="hero">
           <article class="description">
             <h2>Absolutely astonishing breaking news!</h2>
-            <p>Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko. Organic raw denim Vice keffiyeh lomo Kickstarter art lomo Kickstarter art four loko.</p>
+            <p>America economy is on the rise and it's now a great time to get into real-estate.</p>
           </article>
         </section>
 
