--- a/Fix_It/RWDF L2 Start/Start/index.html
+++ b/Fix_It/RWDF L2 Start/Start/index.html
@@ -14,7 +14,7 @@
       <div class="header__inner">
         <img class="header__logo" src="images/city.png" alt="iconic view of a cityscape">
         <h1 class="header__title">
-          The Brighton Times
+          Pine Bluff News
         </h1>
       </div>
     </header>
