--- a/Build_A_Portfolio/PortfolioTester/index.html
+++ b/Build_A_Portfolio/PortfolioTester/index.html
@@ -66,7 +66,31 @@
             </div>  
           </div>
           <div class="col-md-4 text-center text-uppercase">
-             <img class="img-responsive" src="images/ubuntu.jpg" alt="Droid Image">          
+            <img class="img-responsive" src="images/ubuntu.jpg" alt="Droid Image">
+            <h1> linux </h1>          
+                    <!-- Trigger the modal with a button -->
+            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#ubuntuModal">Learn More!</button>
+            <!-- Modal -->
+            <div id="ubuntuModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content text-left">
+                <div class="modal-header">
+                    <button class="close" data-dismiss="modal"  style="float: right;">&times;</button>
+                    <h4 class="modal-title">Ubuntu!</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Website: Code Wars.<br><br>
+                        Instructions: Find the multiplicative persistence.<br><br>
+                        Thought Process: To find the multiplicative persistence, one has to separate a given number into single digits and multiply those numbers until the one reaches a single digit. I used the logic I learned in the foregoing algorithms to solve this algorithm as a whole. After running the numbers 39, one should get the answer of 4.
+                   </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+            </div>           
           </div>
           <div class="col-md-4 text-center text-uppercase">
           <img class="img-responsive" src="images/linuxcube.jpg"  alt="Droid Image">         
