All Modals Coded.

--- a/Build_A_Portfolio/PortfolioTester/index.html
+++ b/Build_A_Portfolio/PortfolioTester/index.html
@@ -1,108 +1,138 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-US-Compatiable" content="IE=edge">
-    <meta name"viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio Test</title>
-          <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-     <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
-      <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    </head>
-    <body>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-                <img src="images/logo.jpg" alt="Logo Image">
-            </div>
-            <div class="col-md-6 text-right text-uppercase">
-                <h1>McKinnely Bentley</h1>
-                <h4>Front-end Ninja</h4>
-            </div>
-          </div>
-         <div class="row">
-             <div class="col-md-12">
-                 <hr>
-         </div>
-         <div class="row">
-             <div class="col-md-12">
-                 <img class="img-responsive" src="images/hr.jpg" alt="Droid Image">
-         </div>  
-       </div>  
-       <div class="row">
-           <div class="col-md-12">
-               <h2>
-                   Featured Work
-               </h2>
-           </div>
-      </div> 
-      <div class="row">
-        <div class="col-md-4 text-center text-uppercase">
-            <img class="img-responsive" src="images/linuxtable.jpg"  alt="Droid Image">   
-            <h1> linux </h1>          
-                    <!-- Trigger the modal with a button -->
-            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#linuxTableModal">Learn More!</button>
-            <!-- Modal -->
-            <div id="linuxTableModal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-                <!-- Modal content-->
-                <div class="modal-content text-left">
-                <div class="modal-header">
-                    <button class="close" data-dismiss="modal"  style="float: right;">&times;</button>
-                    <h4 class="modal-title">Linux App!</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Website: Code Wars.<br><br>
-                        Instructions: Find the multiplicative persistence.<br><br>
-                        Thought Process: To find the multiplicative persistence, one has to separate a given number into single digits and multiply those numbers until the one reaches a single digit. I used the logic I learned in the foregoing algorithms to solve this algorithm as a whole. After running the numbers 39, one should get the answer of 4.
-                   </p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-            </div>  
-          </div>
-          <div class="col-md-4 text-center text-uppercase">
-            <img class="img-responsive" src="images/ubuntu.jpg" alt="Droid Image">
-            <h1> linux </h1>          
-                    <!-- Trigger the modal with a button -->
-            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#ubuntuModal">Learn More!</button>
-            <!-- Modal -->
-            <div id="ubuntuModal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-                <!-- Modal content-->
-                <div class="modal-content text-left">
-                <div class="modal-header">
-                    <button class="close" data-dismiss="modal"  style="float: right;">&times;</button>
-                    <h4 class="modal-title">Ubuntu!</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Website: Code Wars.<br><br>
-                        Instructions: Find the multiplicative persistence.<br><br>
-                        Thought Process: To find the multiplicative persistence, one has to separate a given number into single digits and multiply those numbers until the one reaches a single digit. I used the logic I learned in the foregoing algorithms to solve this algorithm as a whole. After running the numbers 39, one should get the answer of 4.
-                   </p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-            </div>           
-          </div>
-          <div class="col-md-4 text-center text-uppercase">
-          <img class="img-responsive" src="images/linuxcube.jpg"  alt="Droid Image">         
-          </div>
-      </div>    
-      <div class="row">
-          <div class="col-md-12">         
-          
-          </div>
-      </div>
 
-     </div>                         
-    </body>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-US-Compatiable" content="IE=edge">
+	<meta name "viewport" content="width=device-width, initial-scale=1">
+	<title>Portfolio Test</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="css/bootstrap.css">
+</head>
+
+<body>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<img src="images/logo.jpg" alt="Logo Image">
+			</div>
+			<div class="col-md-6 text-right text-uppercase">
+				<h1>McKinnely Bentley</h1>
+				<h4>Front-end Ninja</h4>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<hr>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<img class="img-responsive" src="images/hr.jpg" alt="Droid Image">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<h2>
+						Featured Work
+					</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 text-center text-uppercase">
+					<img class="img-responsive" src="images/linuxtable.jpg" alt="Droid Image">
+					<h1> linux </h1>
+					<!-- Trigger the modal with a button -->
+					<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#linuxTableModal">Learn More!</button>
+					<!-- Modal -->
+					<div id="linuxTableModal" class="modal fade" role="dialog">
+						<div class="modal-dialog">
+							<!-- Modal content-->
+							<div class="modal-content text-left">
+								<div class="modal-header">
+									<button class="close" data-dismiss="modal" style="float: right;">&times;</button>
+									<h4 class="modal-title">Linux App!</h4>
+								</div>
+								<div class="modal-body">
+									<p>Website: Code Wars.<br><br> Instructions: Find the multiplicative persistence.<br><br> Thought Process: To find
+										the multiplicative persistence, one has to separate a given number into single digits and multiply those numbers
+										until the one reaches a single digit. I used the logic I learned in the foregoing algorithms to solve this algorithm
+										as a whole. After running the numbers 39, one should get the answer of 4.
+									</p>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 text-center text-uppercase">
+					<img class="img-responsive" src="images/ubuntu.jpg" alt="Droid Image">
+					<h1> ubuntu </h1>
+					<!-- Trigger the modal with a button -->
+					<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#ubuntuModal">Learn More!</button>
+					<!-- Modal -->
+					<div id="ubuntuModal" class="modal fade" role="dialog">
+						<div class="modal-dialog">
+							<!-- Modal content-->
+							<div class="modal-content text-left">
+								<div class="modal-header">
+									<button class="close" data-dismiss="modal" style="float: right;">&times;</button>
+									<h4 class="modal-title">Ubuntu App!</h4>
+								</div>
+								<div class="modal-body">
+									<p>Website: Code Wars.<br><br> Instructions: Find the multiplicative persistence.<br><br> Thought Process: To find
+										the multiplicative persistence, one has to separate a given number into single digits and multiply those numbers
+										until the one reaches a single digit. I used the logic I learned in the foregoing algorithms to solve this algorithm
+										as a whole. After running the numbers 39, one should get the answer of 4.
+									</p>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 text-center text-uppercase">
+
+					<img class="img-responsive" src="images/linuxcube.jpg" alt="Droid Image">
+                    					<h1> cubed </h1>
+					<!-- Trigger the modal with a button -->
+					<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#cubedModal">Learn More!</button>
+					<!-- Modal -->
+					<div id="cubedModal" class="modal fade" role="dialog">
+						<div class="modal-dialog">
+							<!-- Modal content-->
+							<div class="modal-content text-left">
+								<div class="modal-header">
+									<button class="close" data-dismiss="modal" style="float: right;">&times;</button>
+									<h4 class="modal-title">Linux cubed App!</h4>
+								</div>
+								<div class="modal-body">
+									<p>Website: Code Wars.<br><br> Instructions: Find the multiplicative persistence.<br><br> Thought Process: To find
+										the multiplicative persistence, one has to separate a given number into single digits and multiply those numbers
+										until the one reaches a single digit. I used the logic I learned in the foregoing algorithms to solve this algorithm
+										as a whole. After running the numbers 39, one should get the answer of 4.
+									</p>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+
+				</div>
+			</div>
+
+		</div>
+</body>
+
 </html>
-    
