Added Header And Footer Tags.

--- a/Build_A_Portfolio/PortfolioTester/index.html
+++ b/Build_A_Portfolio/PortfolioTester/index.html
@@ -15,13 +15,15 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6">
+            <header>
+			<div class="col-md-6">           
 				<img src="images/logo.jpg" alt="Logo Image">
 			</div>
 			<div class="col-md-6 text-right text-uppercase">
 				<h1>McKinnely Bentley</h1>
 				<h4>Front-end Ninja</h4>
 			</div>
+            </header>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
@@ -127,8 +129,13 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12 text-center text-uppercase">
+                     <footer>
 
+ <br> <p>Software Engineer: McKinnely Bentley<br> 
+  Contact information: <a href="http://mbcodeguy.blogspot.com/p/about-me.html">
+  Lets Stay In Contact</a>.</p>
+</footer> 
 				</div>
 			</div>
 
