Making final updates to projec.

--- a/Build_A_Portfolio/PortfolioTester/index.html
+++ b/Build_A_Portfolio/PortfolioTester/index.html
@@ -15,15 +15,15 @@
 <body>
 	<div class="container">
 		<div class="row">
-            <header>
-			<div class="col-md-6">           
-				<img src="images/logo.jpg" alt="Logo Image">
-			</div>
-			<div class="col-md-6 text-right text-uppercase">
-				<h1>McKinnely Bentley</h1>
-				<h4>Front-end Ninja</h4>
-			</div>
-            </header>
+			<header>
+				<div class="col-md-6">
+					<img src="images/logo.jpg" alt="Logo Image">
+				</div>
+				<div class="col-md-6 text-right text-uppercase">
+					<h1>McKinnely Bentley</h1>
+					<h4>Front-end Ninja</h4>
+				</div>
+			</header>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
@@ -101,7 +101,7 @@
 				<div class="col-md-4 text-center text-uppercase">
 
 					<img class="img-responsive" src="images/linuxcube.jpg" alt="Droid Image">
-                    					<h1> cubed </h1>
+					<h1> cubed </h1>
 					<!-- Trigger the modal with a button -->
 					<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#cubedModal">Learn More!</button>
 					<!-- Modal -->
@@ -130,12 +130,12 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center text-uppercase">
-                     <footer>
+					<footer>
 
- <br> <p>Software Engineer: McKinnely Bentley<br> 
-  Contact information: <a href="http://mbcodeguy.blogspot.com/p/about-me.html">
+						<br>
+						<p>Software Engineer: McKinnely Bentley<br> Contact information: <a href="http://mbcodeguy.blogspot.com/p/about-me.html">
   Lets Stay In Contact</a>.</p>
-</footer> 
+					</footer>
 				</div>
 			</div>
 
