Finished Portfolio App!

--- a/Build_A_Portfolio/PortfolioTester/index.html
+++ b/Build_A_Portfolio/PortfolioTester/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!--Head Begins-->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-US-Compatiable" content="IE=edge">
@@ -11,10 +11,15 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
-
+<!--Head Ends-->
+<!--Comment Devider-->
+<!--Body Begins-->
 <body>
+	<!--Div Container Class Begins-->
 	<div class="container">
+		<!--Contains Name and Logo-->
 		<div class="row">
+			<!--Semantic Header Begins-->
 			<header>
 				<div class="col-md-6">
 					<img src="images/logo.jpg" alt="Logo Image">
@@ -24,16 +29,20 @@
 					<h4>Front-end Ninja</h4>
 				</div>
 			</header>
+			<!--Semantic Header Ends-->
 		</div>
+		<!--Contains Featured Work Area-->
 		<div class="row">
 			<div class="col-md-12">
 				<hr>
 			</div>
+			<!--Contains Droidbots Image-->
 			<div class="row">
 				<div class="col-md-12">
-					<img class="img-responsive" src="images/hr.jpg" alt="Droid Image">
+					<img class="img-responsive" src="images/droidbots.jpg" alt="Droid Image">
 				</div>
 			</div>
+			<!--Contains Featured Work Text-->
 			<div class="row">
 				<div class="col-md-12">
 					<h2>
@@ -41,6 +50,7 @@
 					</h2>
 				</div>
 			</div>
+			<!--Contains The Linux Table Image-->
 			<div class="row">
 				<div class="col-md-4 text-center text-uppercase">
 					<img class="img-responsive" src="images/linuxtable.jpg" alt="Droid Image">
@@ -70,6 +80,7 @@
 						</div>
 					</div>
 				</div>
+				<!--Contains Ubuntu Image-->
 				<div class="col-md-4 text-center text-uppercase">
 					<img class="img-responsive" src="images/ubuntu.jpg" alt="Droid Image">
 					<h1> ubuntu </h1>
@@ -98,8 +109,8 @@
 						</div>
 					</div>
 				</div>
+				<!--Contains Linux Cubed Image-->
 				<div class="col-md-4 text-center text-uppercase">
-
 					<img class="img-responsive" src="images/linuxcube.jpg" alt="Droid Image">
 					<h1> cubed </h1>
 					<!-- Trigger the modal with a button -->
@@ -128,18 +139,19 @@
 					</div>
 				</div>
 			</div>
+			<!--Contains  Footer And Contact Information-->
 			<div class="row">
 				<div class="col-md-12 text-center text-uppercase">
 					<footer>
-
 						<br>
 						<p>Software Engineer: McKinnely Bentley<br> Contact information: <a href="http://mbcodeguy.blogspot.com/p/about-me.html">
-  Lets Stay In Contact</a>.</p>
+  						Lets Stay In Contact</a>.</p>
 					</footer>
 				</div>
 			</div>
 
 		</div>
+		<!--Div Container Ends-->
 </body>
-
+<!--Body Ends-->
 </html>
