--- a/Build_A_Portfolio/PortfolioTester/index.html
+++ b/Build_A_Portfolio/PortfolioTester/index.html
@@ -40,7 +40,7 @@
 			</header>
 			<!--Semantic Header Ends-->
 		</div>
-		<!--Contains Featured Work Area-->
+		<!--Contains HR Line-->
 		<div class="row">
 			<div class="col-md-12">
 				<hr>
@@ -158,7 +158,6 @@
 					</footer>
 				</div>
 			</div>
-
 		</div>
 		<!--Div Container Ends-->
 </body>
