--- a/Build_A_Portfolio/PortfolioTester/index.html
+++ b/Build_A_Portfolio/PortfolioTester/index.html
@@ -10,19 +10,21 @@
 **************************************************-->
 <html>
 <!--Head Begins-->
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-US-Compatiable" content="IE=edge">
-	<meta name "viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portfolio Test</title>
+	<link rel="shortcut icon" type="image/png" href="images/logo.jpg">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <!--Head Ends-->
 <!--Comment Devider-->
 <!--Body Begins-->
+
 <body>
 	<!--Div Container Class Begins-->
 	<div class="container">
@@ -72,7 +74,6 @@
 							<!-- Modal content-->
 							<div class="modal-content text-left">
 								<div class="modal-header">
-									<button class="close" data-dismiss="modal" style="float: right;">&times;</button>
 									<h4 class="modal-title">Linux App!</h4>
 								</div>
 								<div class="modal-body">
@@ -101,7 +102,6 @@
 							<!-- Modal content-->
 							<div class="modal-content text-left">
 								<div class="modal-header">
-									<button class="close" data-dismiss="modal" style="float: right;">&times;</button>
 									<h4 class="modal-title">Ubuntu App!</h4>
 								</div>
 								<div class="modal-body">
@@ -130,7 +130,6 @@
 							<!-- Modal content-->
 							<div class="modal-content text-left">
 								<div class="modal-header">
-									<button class="close" data-dismiss="modal" style="float: right;">&times;</button>
 									<h4 class="modal-title">Linux cubed App!</h4>
 								</div>
 								<div class="modal-body">
@@ -162,4 +161,5 @@
 		<!--Div Container Ends-->
 </body>
 <!--Body Ends-->
+
 </html>
